# claude-code-api-rs

./: Cargo.toml
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  state.rs  streaming.rs  tools.rs
src/claude/: manager.rs  mod.rs  parser.rs  process.rs
src/models/: claude.rs  openai.rs
src/routes/: chat.rs  embeddings.rs  mod.rs  models.rs  projects.rs  root.rs  sessions.rs
